[package]
name = "rdf-tortank"
version = "0.2.2"
description = "Node addon for Turtle/N3 parser"
authors = ["Nordine Bittich"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]
repository = "https://github.com/nbittich/tortank-js"
[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_json = "1.0.107"
tortank = "0.22.0"

[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-6"]

[profile.release]
lto = true
debug = false
