[package]
name = "rdf-tortank"
version = "0.4.0"
description = "Node addon for Turtle/N3 parser"
authors = ["Nordine Bittich"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]
repository = "https://github.com/nbittich/tortank-js"
[lib]
crate-type = ["cdylib"]


[dependencies]
serde = "1.0.215"
serde_json = "1.0.133"
tortank = "0.24.1"

[dependencies.neon]
version = "1.0.0"
default-features = false
features = ["napi-6"]

[profile.release]
lto = true
debug = false
